--- a/Miniprojects keyframes transitions etc/Knowlage resume CV/index.html
+++ b/Miniprojects keyframes transitions etc/Knowlage resume CV/index.html
@@ -3,105 +3,131 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+
   <link rel="stylesheet" href="style.css">
-  <title>Knowladge Timeline</title>
+  <title>Knowledge Timeline</title>
 </head>
 
 <body>
   <header id="main-header">
     <div class="container">
-      <h1><i class="fas fa-brain"></i>Knowlage Resume</h1>
+      <h1><i class="fas fa-brain"></i> Knowledge Resume</h1>
       <h3><i class="fas fa-user"></i> Brad Traversy</h3>
     </div>
   </header>
-  <seection id="timeline">
+
+  <section id="timeline">
     <ul>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, distinctio. Mollitia reprehenderit
+            veritatis officia perferendis dicta obcaecati sapiente, rem quia?</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2008: JavaScrpit & JQuery</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3>
+            <i class="fas fa-chevron-right"></i> 2008: JavaScript & JQuery
+          </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2009: PHP & Wordpress</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2009: PHP & Wordpress</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2011: Ruby on Rails</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2011: Ruby on Rails</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2012:Python</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2012: Python</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2013: Node.js & React</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2013: Node.js & React</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2015: Angular & React Native</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3>
+            <i class="fas fa-chevron-right"></i> 2015: Angular & React Native
+          </h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2016: Vue.js</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2016: Vue.js</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2017: GraphQI & Apollo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2017: GraphQl & Apollo</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2018: Machiene Learning</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
+          <h3><i class="fas fa-chevron-right"></i> 2018: Machine Learning</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aut
+            eum assumenda architecto, perspiciatis itaque maiores ex rerum
+            libero provident!
+          </p>
         </div>
       </li>
-      <li>
-        <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
-            assumenda laborum soluta architecto similique est.</p>
-        </div>
-      </li>
-
     </ul>
-  </seection>
+  </section>
 
   <script src="main.js"></script>
-
 </body>
 
 </html>
